# app/Http/Controllers/HomeController.php
@@ -8,6 +8,20 @@ use Illuminate\Http\Request;
 
 class HomeController extends Controller
 {
+
+    /**
+     * @OA\Get(
+     *     path="/api/home",
+     *     operationId="home/content",
+     *     summary="show all posts",
+     *     tags={"content"},
+     *     @OA\Response(
+     *         response="200",
+     *         description="Returns records",
+     *         @OA\JsonContent()
+     *     )
+     * )
+     */
     public function index(Request $request)
     {
         $post = Post::all();
